# ajnixx

./: .gitignore  README.md  build.gradle  settings.gradle
ajni++/: build.gradle
ajni++/src/: CMakeLists.txt
ajni++/src/ajni++/: CMakeLists.txt  ajni++.cpp  ajni++.hpp  android-prv.cpp  android-prv.hpp  android.cpp  android.hpp  ast.cpp  ast.hpp  core.cpp  core.hpp  inspect.cpp  java-prv.cpp  java-prv.hpp  jnienv.cpp  jnienv.hpp  jre.cpp  jre.hpp  kotlin.cpp  kotlin.hpp  must_link.cpp  variant.cpp  variant.hpp
ajni++/src/cpp/: CMakeLists.txt  ajni++.cpp  ajni++.hpp  android.cpp  com++.hpp  core.cpp  core.hpp  inspect.cpp  jre.cpp  jre.hpp  kotlin.cpp  kotlin.hpp  variant.cpp  variant.hpp
ajni++/src/cross/: CMakeLists.txt
ajni++/src/main/: AndroidManifest.xml
ajni++/src/main/java/com/nnt/ajnixx/: activity.kt  callback.kt  mainthread.kt
ajni++/src/test/: CMakeLists.txt  test.cpp
app/: build.gradle
app/src/ajni++/: core.cpp  core.hpp  inspect.cpp  jre.hpp  variant.cpp  variant.hpp
app/src/androidTest/java/com/wybosys/ajni/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  ajni.cpp  ajni.h  android.cpp  android.h  inspect.cpp  inspect.h  jre.cpp  jre.h  native-lib.cpp  stlext.h  test.cpp  test.h
app/src/main/java/com/nnt/ajnixx/: BlockView.kt  MainActivity.kt  Test.kt  Test1.kt
app/src/main/java/com/wybosys/ajni/: AJni.kt  BlockView.kt  MainActivity.kt
app/src/main/java/com/wybosys/ajnixx/: AJni.kt  MainActivity.kt
app/src/test/java/com/wybosys/ajni/: ExampleUnitTest.kt
